--- a/src/main/metadata/classes/VehiclePickerController.cls
+++ b/src/main/metadata/classes/VehiclePickerController.cls
@@ -31,8 +31,15 @@ global with sharing class VehiclePickerController {
     *@return: This is a constructor method.
     *@see: VehiclePickerController
     */
+    Public string profileName;
+    Public boolean disableButtons{get;set;}
     public VehiclePickerController(ApexPages.StandardController controller) {
-                
+        //profileName = userinfo.getprofilename();
+        profile p = [select Name from profile where id =:userinfo.getprofileId()];
+        disableButtons = true;
+        if(p.Name.contains('Dealer')){
+            disableButtons = false;
+        }
         currentRecordId  = controller.getId();
         System.debug('Lead Vehicles Types...' +lead_Vehicles);
         Set<Id> lead_VehicleIds;
