--- a/src/main/metadata/classes/UtilConstant.cls
+++ b/src/main/metadata/classes/UtilConstant.cls
@@ -5,6 +5,8 @@ Global with sharing class UtilConstant {
     public final static String DEALER_DELEGATE_ADMIN = 'Dealer Delegate Admin';
     public final static String DEALER_COMMUNITY_USER = 'Dealer Community User';
     public final static String SALES_LEADS = 'Sales Leads';
+    public final static String DEALER_SALES_LEADS_READONLY = 'Dealer Sales leads ReadOnly';
+    public final static String DEALER_AFTERSALES_LEADS_READONLY = 'Dealer Aftersales Leads ReadOnly';
     public final static String AFTER_SALES_LEADS = 'Aftersales Leads';
     public final static String RETAIL_SALES_LEADS = 'Retail Sales Leads';
     public final static String AS_RETAIL_CAMPAIGN = 'AS Retail Campaign';
