Added Components related to Mobile and Phone format

--- a/src/main/metadata/classes/AddressSearchValidationController.cls
+++ b/src/main/metadata/classes/AddressSearchValidationController.cls
@@ -25,10 +25,10 @@ public class AddressSearchValidationController
     
     // KOREA related parameters - Start
     public String market{get;set;}
-    public String homePhoneAreaCode{get;set;}
+    public String homePhoneAreaCodePart1{get;set;}
     public String homePhoneAreaCodePart2{get;set;}
     public String homePhoneAreaCodePart3{get;set;}
-    public String workPhoneAreaCode{get;set;}
+    public String workPhoneAreaCodePart1{get;set;}
     public String workPhoneAreaCodePart2{get;set;}
     public String workPhoneAreaCodePart3{get;set;}
     public String homePhone2AreaCode{get;set;}
@@ -37,8 +37,7 @@ public class AddressSearchValidationController
     public String mobileAreaCode{get;set;}
     public String mobileAreaCodePart2{get;set;}
     public String mobileAreaCodePart3{get;set;}
-     
-    public Map<String,String> phoneAreaCodeMapKR {get;set;}//= new Map<String,String>();
+    
     public string selectedValue { get;set; }
     public List<SelectOption> statusOptions { get;set; }
     public String addresspicklist{get;set;}
@@ -191,11 +190,11 @@ public class AddressSearchValidationController
                     recordTypeId = Schema.SObjectType.Account.getRecordTypeInfosByName().get(System.Label.Company).getRecordTypeId();
                     objAccount.RecordTypeId = recordTypeId;
                                       
-                    if(!homePhoneAreaCode.equals('0')){                      
-                       objAccount.Individual_Home_Phone__c = homePhoneAreaCode+'-'+homePhoneAreaCodePart2+'-'+homePhoneAreaCodePart3;
+                    if(!homePhoneAreaCodePart1.equals('0')){                      
+                       objAccount.Individual_Home_Phone__c = homePhoneAreaCodePart1+'-'+homePhoneAreaCodePart2+'-'+homePhoneAreaCodePart3;
                        }
-                    if(!workPhoneAreaCode.equals('0')){                        
-                         objAccount.Work_Phone__c = workPhoneAreaCode+'-'+workPhoneAreaCodePart2+'-'+workPhoneAreaCodePart3;
+                    if(!workPhoneAreaCodePart1.equals('0')){                        
+                         objAccount.Work_Phone__c = workPhoneAreaCodePart1+'-'+workPhoneAreaCodePart2+'-'+workPhoneAreaCodePart3;
                       }
                     if(!mobileAreaCode.equals('0')){                        
                          objAccount.Mobile__c= mobileAreaCode+'-'+mobileAreaCodePart2+'-'+mobileAreaCodePart3;
@@ -216,11 +215,11 @@ public class AddressSearchValidationController
                 {       
                     recordTypeId = Schema.SObjectType.Account.getRecordTypeInfosByName().get(System.Label.PersonAccount).getRecordTypeId();
                     objPersonAccount.RecordTypeId = recordTypeId;
-                     if(!homePhoneAreaCode.equals('0')){                      
-                       objPersonAccount.Individual_Home_Phone__c = homePhoneAreaCode+'-'+homePhoneAreaCodePart2+'-'+homePhoneAreaCodePart3;
+                     if(!homePhoneAreaCodePart1.equals('0')){                      
+                       objPersonAccount.Individual_Home_Phone__c = homePhoneAreaCodePart1+'-'+homePhoneAreaCodePart2+'-'+homePhoneAreaCodePart3;
                        }
-                    if(!workPhoneAreaCode.equals('0')){                         
-                         objPersonAccount.Work_Phone__c = workPhoneAreaCode+'-'+workPhoneAreaCodePart2+'-'+workPhoneAreaCodePart3;
+                    if(!workPhoneAreaCodePart1.equals('0')){                         
+                         objPersonAccount.Work_Phone__c = workPhoneAreaCodePart1+'-'+workPhoneAreaCodePart2+'-'+workPhoneAreaCodePart3;
                       }                     
                     if(!mobileAreaCode.equals('0')){              
                          objPersonAccount.Mobile__c= mobileAreaCode+'-'+mobileAreaCodePart2+'-'+mobileAreaCodePart3;
@@ -583,21 +582,33 @@ If the user is Saving  same address which matches the fields returned by toleran
     public List<SelectOption> getAreacodeItems() {
          AreaCodeTranslation__mdt  areacodeKR = [SELECT Id,Phone_EN1__c,Phone_TR1__c,Phone_EN2__c,Phone_TR2__c,Phone_EN3__c,Phone_TR3__c ,Phone_EN4__c,Phone_TR4__c,Phone_EN5__c,Phone_TR5__c,Phone_EN6__c,Phone_TR6__c,Phone_EN7__c,Phone_TR7__c,
              Phone_EN8__c,Phone_TR8__c,Phone_EN9__c,Phone_TR9__c,Phone_EN10__c,Phone_TR10__c,Phone_EN11__c,Phone_TR11__c,Phone_EN12__c,Phone_TR12__c,Phone_EN13__c,Phone_TR13__c,Phone_EN14__c,Phone_TR14__c,
-             Phone_EN15__c,Phone_TR15__c,Phone_EN16__c,Phone_TR16__c,Phone_EN17__c,Phone_TR17__c
+             Phone_EN15__c,Phone_TR15__c,Phone_EN16__c,Phone_TR16__c,Phone_EN17__c,Phone_TR17__c,Phone_EN18__c,Phone_EN19__c,Mobile_Code1__c,Mobile_Code2__c
              FROM AreaCodeTranslation__mdt WHERE MD__c  = 'KR' LIMIT 1];
            
-              phoneAreaCodeMapKR= new Map<String,String>();
-              phoneAreaCodeMapKR.put(System.label.None,'');
-              phoneAreaCodeMapKR.put(areacodeKR.Phone_EN1__c+'       '+areacodeKR.Phone_TR1__c,areacodeKR.Phone_EN1__c);phoneAreaCodeMapKR.put(areacodeKR.Phone_EN2__c+'        '+areacodeKR.Phone_TR2__c,areacodeKR.Phone_EN2__c);
-              phoneAreaCodeMapKR.put(areacodeKR.Phone_EN3__c+'       '+areacodeKR.Phone_TR3__c,areacodeKR.Phone_EN3__c);phoneAreaCodeMapKR.put(areacodeKR.Phone_EN4__c+'        '+areacodeKR.Phone_TR4__c,areacodeKR.Phone_EN4__c);
-              phoneAreaCodeMapKR.put(areacodeKR.Phone_EN5__c+'       '+areacodeKR.Phone_TR5__c,areacodeKR.Phone_EN5__c);phoneAreaCodeMapKR.put(areacodeKR.Phone_EN6__c+'        '+areacodeKR.Phone_TR6__c,areacodeKR.Phone_EN6__c);
-              phoneAreaCodeMapKR.put(areacodeKR.Phone_EN7__c+'       '+areacodeKR.Phone_TR7__c,areacodeKR.Phone_EN7__c);phoneAreaCodeMapKR.put(areacodeKR.Phone_EN8__c+'        '+areacodeKR.Phone_TR8__c,areacodeKR.Phone_EN8__c);
-              phoneAreaCodeMapKR.put(areacodeKR.Phone_EN9__c+'       '+areacodeKR.Phone_TR9__c,areacodeKR.Phone_EN9__c);phoneAreaCodeMapKR.put(areacodeKR.Phone_EN10__c+'        '+areacodeKR.Phone_TR10__c,areacodeKR.Phone_EN10__c);
-              phoneAreaCodeMapKR.put(areacodeKR.Phone_EN11__c+'       '+areacodeKR.Phone_TR11__c,areacodeKR.Phone_EN11__c);phoneAreaCodeMapKR.put(areacodeKR.Phone_EN12__c+'        '+areacodeKR.Phone_TR12__c,areacodeKR.Phone_EN12__c);
-              phoneAreaCodeMapKR.put(areacodeKR.Phone_EN13__c+'       '+areacodeKR.Phone_TR13__c,areacodeKR.Phone_EN13__c);phoneAreaCodeMapKR.put(areacodeKR.Phone_EN14__c+'        '+areacodeKR.Phone_TR14__c,areacodeKR.Phone_EN14__c);
-              phoneAreaCodeMapKR.put(areacodeKR.Phone_EN15__c+'       '+areacodeKR.Phone_TR15__c,areacodeKR.Phone_EN15__c);phoneAreaCodeMapKR.put(areacodeKR.Phone_EN16__c+'        '+areacodeKR.Phone_TR16__c,areacodeKR.Phone_EN16__c);
-              phoneAreaCodeMapKR.put(areacodeKR.Phone_EN17__c+'       '+areacodeKR.Phone_TR17__c,areacodeKR.Phone_EN17__c);   
-               
+             Map<String,String> phoneAreaCodeMapKR = new Map<String,String>();
+                 phoneAreaCodeMapKR.put(System.label.None,'');
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN1__c,areacodeKR.Phone_EN1__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN2__c,areacodeKR.Phone_EN2__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN3__c,areacodeKR.Phone_EN3__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN4__c,areacodeKR.Phone_EN4__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN5__c,areacodeKR.Phone_EN5__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN6__c,areacodeKR.Phone_EN6__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN7__c,areacodeKR.Phone_EN7__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN8__c,areacodeKR.Phone_EN8__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN9__c,areacodeKR.Phone_EN9__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN10__c,areacodeKR.Phone_EN10__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN11__c,areacodeKR.Phone_EN11__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN12__c,areacodeKR.Phone_EN12__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN13__c,areacodeKR.Phone_EN13__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN14__c,areacodeKR.Phone_EN14__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN15__c,areacodeKR.Phone_EN15__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN16__c,areacodeKR.Phone_EN16__c);
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN17__c,areacodeKR.Phone_EN17__c); 
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN18__c,areacodeKR.Phone_EN18__c); 
+                 phoneAreaCodeMapKR.put(areacodeKR.Phone_EN19__c,areacodeKR.Phone_EN19__c); 
+                 phoneAreaCodeMapKR.put(areacodeKR.Mobile_Code1__c,areacodeKR.Mobile_Code1__c); 
+                 phoneAreaCodeMapKR.put(areacodeKR.Mobile_Code2__c,areacodeKR.Mobile_Code2__c); 
+                   
                 List<SelectOption> options = new List<SelectOption>();
                 options.add(new SelectOption('0',System.label.None));
                 options.add(new SelectOption( areacodeKR.Phone_EN1__c,areacodeKR.Phone_EN1__c+'      '+areacodeKR.Phone_TR1__c));
@@ -617,11 +628,21 @@ If the user is Saving  same address which matches the fields returned by toleran
                 options.add(new SelectOption( areacodeKR.Phone_EN15__c,areacodeKR.Phone_EN15__c+'       '+areacodeKR.Phone_TR15__c));
                 options.add(new SelectOption( areacodeKR.Phone_EN16__c,areacodeKR.Phone_EN16__c+'       '+areacodeKR.Phone_TR16__c));
                 options.add(new SelectOption( areacodeKR.Phone_EN17__c,areacodeKR.Phone_EN17__c+'       '+areacodeKR.Phone_TR17__c ));
+                options.add(new SelectOption( areacodeKR.Mobile_Code1__c,areacodeKR.Mobile_Code1__c));
+                options.add(new SelectOption( areacodeKR.Mobile_Code2__c,areacodeKR.Mobile_Code2__c));
+                options.add(new SelectOption( areacodeKR.Phone_EN18__c,areacodeKR.Phone_EN18__c));
+                options.add(new SelectOption( areacodeKR.Phone_EN19__c,areacodeKR.Phone_EN19__c));                
+                if(!(String.isBlank(homePhoneAreaCodePart1)) && !phoneAreaCodeMapKR.containsKey(homePhoneAreaCodePart1)){
+                  options.add(new SelectOption( homePhoneAreaCodePart1,homePhoneAreaCodePart1));
+                }
+                if(!(String.isBlank(workPhoneAreaCodePart1)) && !phoneAreaCodeMapKR.containsKey(workPhoneAreaCodePart1)){
+                  options.add(new SelectOption( workPhoneAreaCodePart1,workPhoneAreaCodePart1));
+                }  
                 return options;
         }
         
     public void resetPhoneAreacodes(){
-        homePhoneAreaCode = homePhoneAreaCodePart2 = homePhoneAreaCodePart3 = workPhoneAreaCode = workPhoneAreaCodePart2 = workPhoneAreaCodePart3 = homePhone2AreaCode = homePhone2AreaCodePart2 = homePhone2AreaCodePart3 = mobileAreaCode= mobileAreaCodePart2 = mobileAreaCodePart3 = '';
+        homePhoneAreaCodePart1 = homePhoneAreaCodePart2 = homePhoneAreaCodePart3 = workPhoneAreaCodePart1 = workPhoneAreaCodePart2 = workPhoneAreaCodePart3 = homePhone2AreaCode = homePhone2AreaCodePart2 = homePhone2AreaCodePart3 = mobileAreaCode= mobileAreaCodePart2 = mobileAreaCodePart3 = '';
        
     }      
     
