Added Components related to Mobile and Phone format

--- a/src/main/metadata/classes/ContactTableController.cls
+++ b/src/main/metadata/classes/ContactTableController.cls
@@ -58,19 +58,28 @@ public class ContactTableController
    public void PhoneNumberFormat(){
       
          if(!(String.isBlank(ParAcc.Individual_Home_Phone__c)) && ParAcc.MD__c=='KR'){
+              if(ParAcc.Individual_Home_Phone__c.contains('-')){
+                  ApexPages.addmessage(new ApexPages.message(ApexPages.severity.Error,System.label.Insufficient_privilege));
+              }
               String[] resultshomePhoneAreaCode= ParAcc.Individual_Home_Phone__c.split('-'); 
               homePhoneAreaCodePart1=resultshomePhoneAreaCode[0];
               homePhoneAreaCodePart2=resultshomePhoneAreaCode[1];
-              homePhoneAreaCodePart3=resultshomePhoneAreaCode[2]; 
+              homePhoneAreaCodePart3=resultshomePhoneAreaCode[2];               
           }
   
          if(!(String.isBlank(ParAcc.Work_Phone__c)) && ParAcc.MD__c=='KR'){ 
+            if(ParAcc.Work_Phone__c.contains('-')){
+                  ApexPages.addmessage(new ApexPages.message(ApexPages.severity.Error,System.label.Insufficient_privilege));
+              }
             String[] resultsworkPhoneAreaCode= ParAcc.Work_Phone__c.split('-');  
             workPhoneAreaCodePart1=resultsworkPhoneAreaCode[0];
             workPhoneAreaCodePart2=resultsworkPhoneAreaCode[1];
             workPhoneAreaCodePart3=resultsworkPhoneAreaCode[2]; 
           } 
         if(!(String.isBlank(ParAcc.Mobile__c)) && ParAcc.MD__c=='KR'){ 
+             if(ParAcc.Mobile__c.contains('-')){
+                  ApexPages.addmessage(new ApexPages.message(ApexPages.severity.Error,System.label.Insufficient_privilege));
+              }
             String[] resultsworkPhoneAreaCode= ParAcc.Mobile__c.split('-');  
             mobilePhoneAreaCodePart1=resultsworkPhoneAreaCode[0];
             mobilePhoneAreaCodePart2=resultsworkPhoneAreaCode[1];
