Fixed the issue on the class

--- a/src/main/metadata/classes/AddressSearchValidationController.cls
+++ b/src/main/metadata/classes/AddressSearchValidationController.cls
@@ -26,9 +26,11 @@ public class AddressSearchValidationController
     // KOREA related parameters - Start
     public String market{get;set;}
     public String homePhoneAreaCodePart1{get;set;}
+    public String homePhoneAreaCode{get;set;}
     public String homePhoneAreaCodePart2{get;set;}
     public String homePhoneAreaCodePart3{get;set;}
     public String workPhoneAreaCodePart1{get;set;}
+    public String workPhoneAreaCode{get;set;}
     public String workPhoneAreaCodePart2{get;set;}
     public String workPhoneAreaCodePart3{get;set;}
     public String homePhone2AreaCode{get;set;}
